third_party/move/move-compiler-v2/tests/more-v1/parser/match_negative_address_access.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/match_negative_address_access.move:4:13
  │
4 │             -0x1::m::foo() => 1,
  │             ^
  │             │
  │             Unexpected '-'
  │             Expected a variable or struct or variant name
