third_party/move/move-compiler-v2/tests/more-v1/parser/match_negative_address_access.move
module 0xc0ffee::m {
    fun test(x: i8): i8 {
        match (x) {
            -0x1::m::foo() => 1,
            _ => 0,
        }
    }
}
